--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,7 +18,7 @@ xwayland {
 
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun --allow-images --config ~/.config/wofi/config --style ~/.config/wofi/style.css 
+$menu = wofi --show drun -p "Search..." --allow-images --config ~/.config/wofi/config --style ~/.config/wofi/style.css 
 
 #################
 ### AUTOSTART ###
