--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -211,10 +211,14 @@ windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
-windowrulev2 = opacity 0.97 override 0.9 override 1.0 override, class:(firefox)
-windowrulev2 = opacity 0.9 override, title:(Mozilla Firefox)
-windowrulev2 = opacity 0.9 override, class:vesktop
 
+
+windowrulev2 = opacity 0.97 override 0.9 override, class:(firefox)
+windowrulev2 = opacity 0.9 override, title:^(Mozilla Firefox)$
+
+windowrulev2 = opacity 0.97 override 0.9 override, class:vesktop
+
+windowrulev2 = opacity 1 override, fullscreen:1
 
 #############################
 ### ENVIRONMENT VARIABLES ###
