--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,14 +28,11 @@ $menu = wofi --show drun -p "Search..." --allow-images --config ~/.config/wofi/c
 exec-once = $terminal
 exec-once = waybar
 exec-once = hyprpaper
+exec-once = clipse -listen
 
 # Ensure Wayland and desktop environment variables are properly imported and updated
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-# Set up clipboard monitoring and storage for different data types.
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
 
 #####################
 ### LOOK AND FEEL ###
@@ -109,7 +106,6 @@ bind = $mod, RETURN, exec, $terminal
 bind = $mod, Q, killactive,
 bind = $mod, M, exit,
 bind = $mod, E, exec, $fileManager
-bind = $mod, V, togglefloating,
 bind = $mod, R, exec, $menu
 bind = $mod, P, pseudo, # dwindle
 bind = $mod, SPACE, togglesplit, # dwindle
@@ -176,6 +172,9 @@ bind = , PRINT, exec, hyprshot -m output
 # Screenshot a region
 bind = $mod SHIFT, PRINT, exec, hyprshot -m region
 
+# Open clipboard history
+bind = $mod, V, exec,  $terminal --class clipse -e 'clipse'
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
@@ -219,6 +218,9 @@ windowrulev2 = opacity 0.9 override, title:^(Mozilla Firefox)$
 windowrulev2 = opacity 0.97 override 0.9 override, class:vesktop
 
 windowrulev2 = opacity 1 override, fullscreen:1
+
+windowrulev2 = float,class:(clipse) # ensure you have a floating window class set if you want this behavior
+windowrulev2 = size 622 652,class:(clipse) # set the size of the window as necessary
 
 #############################
 ### ENVIRONMENT VARIABLES ###
