--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,10 +3,10 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor =, preferred, auto, 1.5
+monitor = eDP-1, preferred, auto, 1.5
 
 xwayland {
-  force_zero_scaling = true
+    force_zero_scaling = true
 }
 
 ###################
@@ -18,15 +18,15 @@ xwayland {
 
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun -p "Search..." --allow-images --config ~/.config/wofi/config --style ~/.config/wofi/style.css 
+$menu = wofi --show drun -p "Search..." --allow-images --config ~/.config/wofi/config --style ~/.config/wofi/style.css
+$topbar = waybar
 
 #################
 ### AUTOSTART ###
 #################
 
 # Open a terminal and run the waybar on start
-exec-once = $terminal
-exec-once = waybar
+exec-once = $topbar
 exec-once = hyprpaper
 exec-once = clipse -listen
 
@@ -80,12 +80,16 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,az
     follow_mouse = 1
     touchpad {
         natural_scroll = true
     }
 }
+
+# Set Windows+Space for keyboard switch)
+# Not putting it with other binds for context
+bind = SUPER, SPACE, exec, ~/.config/hypr/scripts/kblayout.sh switch-lang $topbar
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
@@ -107,8 +111,8 @@ bind = $mod, Q, killactive,
 bind = $mod, M, exit,
 bind = $mod, E, exec, $fileManager
 bind = $mod, R, exec, $menu
-bind = $mod, P, pseudo, # dwindle
-bind = $mod, SPACE, togglesplit, # dwindle
+bind = $mod, O, pseudo, # dwindle
+bind = $mod, P, togglesplit, # dwindle
 bind = $mod, F, fullscreen,
 
 # Move focus with mod + varrow keys
@@ -121,7 +125,7 @@ bind = $mod SHIFT, H, movewindow, l
 bind = $mod SHIFT, L, movewindow, r
 bind = $mod SHIFT, K, movewindow, u
 bind = $mod SHIFT, J, movewindow, d
-# Resize windows using mod + arrow keys 
+# Resize windows using mod + arrow keys
 binde = $mod, right, resizeactive, 25 0
 binde = $mod, left, resizeactive, -25 0
 binde = $mod, up, resizeactive, 0 -10
@@ -190,12 +194,6 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
@@ -211,7 +209,6 @@ windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
-
 windowrulev2 = opacity 0.97 override 0.9 override, class:(firefox)
 windowrulev2 = opacity 0.9 override, title:^(Mozilla Firefox)$
 
@@ -221,6 +218,8 @@ windowrulev2 = opacity 1 override, fullscreen:1
 
 windowrulev2 = float,class:(clipse) # ensure you have a floating window class set if you want this behavior
 windowrulev2 = size 622 652,class:(clipse) # set the size of the window as necessary
+
+windowrulev2 = float, class:floating
 
 #############################
 ### ENVIRONMENT VARIABLES ###
