Add hypr/waybar changes

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ general {
 # BACKGROUND
 background {
   monitor =
-  path = $HOME/.config/background
+  path = ~/Pictures/Wallpapers/dawn.jpg
   blur_passes = 0
   color = $base
 }
@@ -54,36 +54,23 @@ label {
   valign = top
 }
 
-# USER AVATAR
-image {
-  monitor =
-  path = $HOME/.face
-  size = 100
-  border_color = $accent
-  position = 0, 75
-  halign = center
-  valign = center
-}
-
 # INPUT FIELD
 input-field {
   monitor =
   size = 300, 60
-  outline_thickness = 4
+  outline_thickness = 1
   dots_size = 0.2
   dots_spacing = 0.2
   dots_center = true
   outer_color = $accent
   inner_color = $surface0
   font_color = $text
-  fade_on_empty = false
-  placeholder_text = <span foreground="##$textAlpha"><i>🔒 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
-  hide_input = false
+  fade_on_empty = true
   check_color = $accent
   fail_color = $red
   fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
   capslock_color = $yellow
-  position = 0, -47
+  position = 0, 50
   halign = center
-  valign = center
+  valign = bottom
 }
