--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,6 +34,8 @@ exec-once = clipse -listen
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+
 #####################
 ### LOOK AND FEEL ###
 #####################
@@ -47,6 +49,7 @@ general {
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     layout = dwindle
+    resize_on_border = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -105,7 +108,9 @@ gestures {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Power key, for some reason XF86PowerOff does not work
+bind = $mod, code:124, exec, hyprlock
+
 bind = $mod, RETURN, exec, $terminal
 bind = $mod, Q, killactive,
 bind = $mod, M, exit,
@@ -114,6 +119,7 @@ bind = $mod, R, exec, $menu
 bind = $mod, O, pseudo, # dwindle
 bind = $mod, P, togglesplit, # dwindle
 bind = $mod, F, fullscreen,
+bind = $mod, I, togglefloating
 
 # Move focus with mod + varrow keys
 bind = $mod, H, movefocus, l
@@ -180,8 +186,8 @@ bind = $mod SHIFT, PRINT, exec, hyprshot -m region
 bind = $mod, V, exec,  $terminal --class clipse -e 'clipse'
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
@@ -236,6 +242,7 @@ env = GDK_BACKEND, wayland,x11
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
