--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -243,6 +243,15 @@ env = GDK_BACKEND, wayland,x11
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme Bibata-Modern-Classic
+
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+
+
+plugin:dynamic-cursors {
+    shake {
+        effects = true
+    }
+}
