--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,10 @@
 window_margin_width 5
 confirm_os_window_close -0
-background_opacity 0.6
+background_opacity 0.8
+
+font_family CaskaydiaCove Nerd Font
+font_size 14
+
+map ctrl+shift+plus increase_font_size
+map ctrl+minus decrease_font_size
+
