--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,7 +17,7 @@ xwayland {
 # Set programs that you use
 
 $terminal = kitty
-$fileManager = nautilus
+$fileManager = yazi
 $menu = wofi --show drun -p "Search..." --allow-images --config ~/.config/wofi/config --style ~/.config/wofi/style.css
 $topbar = waybar
 
@@ -94,13 +94,6 @@ input {
 # Not putting it with other binds for context
 bind = SUPER, SPACE, exec, ~/.config/hypr/scripts/kblayout.sh switch-lang $topbar
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
-    workspace_swipe_distance = 200
-}
-
 ###################
 ### KEYBINDINGS ###
 ###################
@@ -114,7 +107,7 @@ bind = $mod, code:124, exec, hyprlock
 bind = $mod, RETURN, exec, $terminal
 bind = $mod, Q, killactive,
 bind = $mod, M, exit,
-bind = $mod, E, exec, $fileManager
+bind = $mod, E, exec, kitty -e $fileManager
 bind = $mod, R, exec, $menu
 bind = $mod, O, pseudo, # dwindle
 bind = $mod, P, togglesplit, # dwindle
@@ -243,7 +236,6 @@ env = GDK_BACKEND, wayland,x11
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
-exec-once = gsettings set org.gnome.desktop.interface cursor-theme Bibata-Modern-Classic
 
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
