--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,32 +1,60 @@
+##### Basics ###################################################################
+
+# Indexing
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Mouse + History
 set -g mouse on
+set -g history-limit 100000
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-vim_pattern='(\\S+\\/)?g?\.?(view|l?n?vim?x?|fzf)(diff)?(-wrapped)?$'
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +${vim_pattern}'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
-
-bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
+# Vi mode in copy-mode
 setw -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection     # Begin selection in copy mode.
-bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle  # Begin selection in copy mode.
-bind-key -T copy-mode-vi 'y' send -X copy-selection      # Yank selection in copy mode.
+
+##### Pane/Window Management ####################################################
+
+# Split/new-window in current path
+bind c  new-window                -c "#{pane_current_path}"
+bind '"' split-window             -c "#{pane_current_path}"
+bind %  split-window -h           -c "#{pane_current_path}"
+bind -  split-window -v           -c "#{pane_current_path}"
+bind |  split-window -h           -c "#{pane_current_path}"
+
+# Kill bindings
+unbind x
+bind   x kill-pane
+unbind &
+bind   k kill-window
+
+##### Copy-mode-vi ##############################################################
+
+# Rebind after clearing any existing 'v'
 unbind-key -T copy-mode-vi v
+bind-key  -T copy-mode-vi v   send -X begin-selection     # Begin selection
+bind-key  -T copy-mode-vi C-v send -X rectangle-toggle    # Toggle block selection
+bind-key  -T copy-mode-vi y   send -X copy-selection      # Yank selection
+
+# Pane navigation while in copy-mode-vi
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
+
+##### Smart pane switching (Vim-aware) #########################################
+# See: https://github.com/christoomey/vim-tmux-navigator
+
+vim_pattern='(\S+\/)?g?\.?(view|l?n?vim?x?|fzf)(diff)?(-wrapped)?$'
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +${vim_pattern}'"
+
+# Move with Ctrl-h/j/k/l: send to Vim if active, otherwise move pane
+bind-key -n C-h if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind-key -n C-j if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind-key -n C-k if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind-key -n C-l if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
+# Ctrl-\ behavior varies by tmux version; use tmux's format comparison
+if-shell -F '#{>=:#{version},3.0}' \
+  "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\' 'select-pane -l'" \
+  "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+
