fix gesture update

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -72,6 +72,9 @@ dwindle {
     preserve_split = true # You probably want this
 }
 
+# https://wiki.hyprland.org/Configuring/Variables/#gestures
+gesture = 3, horizontal, workspace
+
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
