--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ bind-key -T copy-mode-vi C-h select-pane -L
 bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 ##### Smart pane switching (Vim-aware) #########################################
 # See: https://github.com/christoomey/vim-tmux-navigator
