--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,3 +58,5 @@ if-shell -F '#{>=:#{version},3.0}' \
   "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\' 'select-pane -l'" \
   "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 
+# Open tmux-tui app with leader + enter
+bind-key Enter split-window -v "$XDG_CONFIG_HOME/bin/tmux-tui"
